--- a/src/styles/variables/other.css
+++ b/src/styles/variables/other.css
@@ -11,6 +11,18 @@
 	}
 }
 
+@media only screen and (max-width: 1281px) {
+	:root {
+		--content-width: 80vw;
+	}
+}
+
+@media only screen and (max-width: 481px) {
+	:root {
+		--content-width: 90vw;
+	}
+}
+
 /* var(--phone-sm) */
 @media only screen and (max-width: 576px) {
 	:root {
