nav and carousel redesign

--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -11,7 +11,16 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    src: local('Inter'),
-        url('/fonts/Inter-Regular.woff2') format('woff2');
+    src: local('Inter-Regular'),
+        url('/fonts/Inter/Inter-Regular.woff2') format('woff2');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Inter-Bold'),
+        url('/fonts/Inter/Inter-Bold.woff2') format('woff2');
     font-display: swap;
 }
