--- a/src/styles/variables/typography.css
+++ b/src/styles/variables/typography.css
@@ -1,12 +1,12 @@
 :root {
     --font-family-primary: 'Inter';
     --font-family-secondary: 'Courgette';
-    --font-h1: 400 9.6rem/1.1 var(--font-family-primary);
-    --font-h2: 400 6.4rem/1.1 var(--font-family-primary);
-    --font-h3: 400 4.8rem/1.1 var(--font-family-primary);
-    --font-h4: 400 2.4rem/1.25 var(--font-family-primary);
-    --font-h5: 400 1.6rem/1.25 var(--font-family-primary);
-    --font-h6: 400 1.2rem/1.25 var(--font-family-primary);
+    --font-h1: 700 9.6rem/1.1 var(--font-family-primary);
+    --font-h2: 700 6.4rem/1.2 var(--font-family-primary);
+    --font-h3: 700 4.8rem/1.2 var(--font-family-primary);
+    --font-h4: 700 2.4rem/1.2 var(--font-family-primary);
+    --font-h5: 400 1.6rem/1.2 var(--font-family-primary);
+    --font-h6: 400 1.2rem/1.2 var(--font-family-primary);
     --font-body: 1.6rem/1.5 var(--font-family-primary);
     --font-h1-mobile: 400 6.4rem/1.1 var(--font-family-primary);
     --font-h2-mobile: 400 4.8rem/1.1 var(--font-family-primary);
@@ -15,6 +15,7 @@
 
 .h1, .h2, .h3, .h4, .h5, .h6 {
     margin: 0;
+    color: #402616;
 }
 
 .h1 {
