--- a/src/styles/css-components/scrollbar.css
+++ b/src/styles/css-components/scrollbar.css
@@ -1,6 +1,6 @@
 *::-webkit-scrollbar {
-    width: 0.5rem;
-    height: 0.5rem;
+    width: 0.75rem;
+    height: 0.75rem;
 }
 
 *::-webkit-scrollbar-track {
@@ -8,5 +8,5 @@
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: var(--accent-primary);
+    background-color: #402616;
 }
