--- a/src/styles/variables/other.css
+++ b/src/styles/variables/other.css
@@ -3,3 +3,16 @@
 	--content-padding: 10rem;
 	--header-height: 10rem;
 }
+
+@media only screen and (max-width: 1024px) {
+	:root {
+		--header-height: 8rem;
+		--content-padding: 6rem;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	:root {
+		--content-padding: 3rem;
+	}
+}
