mobile design fixed

--- a/src/styles/css-components/button.css
+++ b/src/styles/css-components/button.css
@@ -25,3 +25,10 @@
     color: var(--accent-primary);
     font: 1.6rem/1.5 var(--font-family-primary);
 }
+
+@media only screen and (max-width: 480px) {
+	.button {
+        font-size: 1.4rem;
+        padding: 1rem 2rem;
+    }
+}
