removed img repload, use picture, font optim, SEO

--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -19,8 +19,26 @@
 @font-face {
     font-family: 'Inter';
     font-style: normal;
+    font-weight: 400;
+    src: local('Inter-Regular'),
+        url('/fonts/Inter/Inter-Regular-RO.woff2') format('woff2');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    font-style: normal;
     font-weight: 700;
     src: local('Inter-Bold'),
         url('/fonts/Inter/Inter-Bold.woff2') format('woff2');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Inter-Bold'),
+        url('/fonts/Inter/Inter-Bold-RO.woff2') format('woff2');
     font-display: swap;
 }
