remove unused, cls fix, youtube links, redesign

--- a/src/styles/variables/typography.css
+++ b/src/styles/variables/typography.css
@@ -7,7 +7,7 @@
     --font-h4: 700 2.4rem/1.2 var(--font-family-primary);
     --font-h5: 400 1.6rem/1.2 var(--font-family-primary);
     --font-h6: 400 1.2rem/1.2 var(--font-family-primary);
-    --font-body: 1.6rem/1.5 var(--font-family-primary);
+    --font-body: 400 1.6rem/1.5 var(--font-family-primary);
     --font-h1-mobile: 700 6.4rem/1.1 var(--font-family-primary);
     --font-h2-mobile: 700 4.8rem/1.1 var(--font-family-primary);
     --font-h3-mobile: 700 3.2rem/1.1 var(--font-family-primary);
