--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -23,14 +23,14 @@ html, body {
 
 html {
 	font-size: 62.5%;
-	font-family: var(--font-family-base), -apple-system, BlinkMacSystemFont, Segoe UI,
+	font-family: var(--font-family-primary), -apple-system, BlinkMacSystemFont, Segoe UI,
 		Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
 		sans-serif;
 }
 
 body {
-	background-color: var(--text-light-color);
-	color: var(--text-primary);
+	background-color: var(--background-color);
+	color: var(--text-dark-color);
 }
 
 button {
@@ -109,8 +109,13 @@ details summary {
 	margin: 2rem 0;
 }
 
-/* 320px — 480px: Mobile devices
-481px — 768px: iPads, Tablets
-769px — 1024px: Small screens, laptops
-1025px — 1200px: Desktops, large screens
-1201px and more —  Extra large screens, TV */
+.pageSection {
+	padding: 6rem 0;
+}
+
+.glass {
+	background: rgba(0, 0, 0, 0.1);
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(7px);
+	-webkit-backdrop-filter: blur(7px);
+}
