--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -1,44 +1,17 @@
 @font-face {
-    font-family: 'Courgette';
+    font-family: 'BarlowCondensed';
     font-style: normal;
-    font-weight: 400;
-    src: local('Courgette'),
-        url('/fonts/Courgette-Regular.woff2') format('woff2');
+    font-weight: 500;
+    src: local('BarlowCondensed-Medium'),
+        url('/fonts/BarlowCondensed-Medium.woff2') format('woff2');
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Inter';
+    font-family: 'BarlowCondensed';
     font-style: normal;
-    font-weight: 400;
-    src: local('Inter-Regular'),
-        url('/fonts/Inter/Inter-Regular.woff2') format('woff2');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Inter-Regular'),
-        url('/fonts/Inter/Inter-Regular-RO.woff2') format('woff2');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    src: local('Inter-Bold'),
-        url('/fonts/Inter/Inter-Bold.woff2') format('woff2');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    src: local('Inter-Bold'),
-        url('/fonts/Inter/Inter-Bold-RO.woff2') format('woff2');
+    font-weight: 600;
+    src: local('BarlowCondensed-SemiBold'),
+        url('/fonts/BarlowCondensed-SemiBold.woff2') format('woff2');
     font-display: swap;
 }
