--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,6 +9,7 @@
 @import url("./css-components/dialog.css");
 @import url("./css-components/button.css");
 @import url("./css-components/input.css");
+@import url("./css-components/list.css");
 
 *,
 *::after,
