--- a/src/styles/css-components/input.css
+++ b/src/styles/css-components/input.css
@@ -16,6 +16,7 @@ input[type='checkbox'] {
     appearance: none;
     margin: 0;
     border: 1px solid var(--text-dark-color);
+    min-width: 2.4rem;
     width: 2.4rem;
     height: 2.4rem;
     transition: 200ms background-color;
