--- a/src/styles/css-components/button.css
+++ b/src/styles/css-components/button.css
@@ -45,7 +45,7 @@
     padding: 1rem 3rem;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-height: 800px), (max-width: 480px) {
     .button {
         font-size: 1.4rem;
         padding: 1rem 2rem;
